# aeroframe-dt

./: .gitignore  CHANGELOG.md  DECISIONS_AF-DT-1000_revA.md  PARAMETER_SCHEMA.csv  PROJECT_STATE.md  README.md  pyproject.toml
.software_sync/: install_payload.py  trigger
benchmarks/: BENCHMARK_LOCK.md
cad/: GEOMETRY_CONCEPT.md  PARAMETER_SCHEMA.csv  PMI_REQUIREMENTS.md  build_revD.py
digital_thread/: README.md  evidence_seed.csv
docs/: DECISIONS.md  F5_F6_STATIC_RESULTS_AF-DT-1000_revA.md  F5_STATIC_RESULTS_AF-DT-1000_revB.md  HUMAN_TOOL_EXECUTION_RUNBOOK.md  LOAD_PATH_AND_FBD.md  RISKS_AND_LIMITATIONS.md  SOFTWARE_COMPLETION_MATRIX.md  SOFTWARE_IMPLEMENTATION_STATUS.md  STRESS_REPORT.md
examples/: synthetic_afgrow_case.json  synthetic_benchmarks.json  synthetic_cad_parameters.json  synthetic_convergence.csv  synthetic_fatigue_case.json  synthetic_hand_calc_case.json  synthetic_inspection.json  synthetic_load_case.json  synthetic_load_envelope.json  synthetic_qif_sidecar.json  synthetic_report.json  synthetic_substantiation_case.json
fatigue_damage_tolerance/: README.md
inspection_quality/: README.md
loads/: ASSUMPTIONS_AND_PROVENANCE.md  LOAD_BASIS_AF-DT-1000_revA.md  LOAD_BASIS_AF-DT-1000_revB.md
materials/: MATERIAL_TRADE.md
reports/: README.md
requirements/: requirements.csv  verification_matrix.csv
tests/: test_advanced.py  test_cli.py  test_hand_calcs.py  test_loads.py  test_software_completion.py  test_traceability.py
tools/: analyze_convergence.py  audit_release.py  build_evidence_graph.py  check_traceability.py  create_release.py  (+12 more)
(+73 files in other folders)
